<resources>
    <string name="app_name">Walmart</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password_required">Password (required)</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address_required">Email address (required)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password *</string>
    <string name="email_address">Email address *</string>
    <string name="last_name">Last name *</string>
    <string name="first_name">First name *</string>
    <string name="required_fields">* required fields</string>
    <string name="create_account">Create account</string>
    <string name="first_number">First number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="into">*</string>
    <string name="devide">/</string>
    <string name="result">Result :</string>
    <string name="second_number">Second number</string>
</resources>